<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fiannce.myapplication.ManageActivity">

    <com.fiannce.framework.view.ToolBar
        android:id="@+id/toobar_fake"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Toolbar_layout_height"
        android:background="@color/colorBlack"
        app:textcolor="@color/colorToolbar"
        app:leftImg="@drawable/left"
        app:leftIsShow="true"
        app:titleText="@string/manage_title"></com.fiannce.framework.view.ToolBar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_text_one"
        android:gravity="center"
        android:textSize="@dimen/manage_TextView_textSize"
        android:layout_marginTop="@dimen/manage_TextView_layout_marginTop"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_text_two"
        android:textSize="@dimen/manage_TextView_textSize"
        android:layout_marginTop="@dimen/manage_TextView_layout_marginTop"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_text_three"
        android:textSize="@dimen/manage_TextView_textSize"
        android:layout_marginTop="@dimen/manage_TextView_layout_marginTop"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_text_four"
        android:textSize="@dimen/manage_TextView_textSize"
        android:layout_marginTop="@dimen/manage_TextView_layout_marginTop"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_text_five"
        android:textSize="@dimen/manage_TextView_textSize"
        android:layout_marginTop="@dimen/manage_TextView_layout_marginTop"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_text_six"
        android:textSize="@dimen/manage_TextView_textSize"
        android:layout_marginTop="@dimen/manage_TextView_layout_marginTop"
        ></TextView>
</LinearLayout>
