<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.fiannce.framework.view.ToolBar
        android:id="@+id/toobar_fake"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Toolbar_layout_height"
        android:visibility="gone"></com.fiannce.framework.view.ToolBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_linearLayout_layout_height"
        android:layout_weight="10"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/main_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_view_layout_height"
        android:background="@color/colorMainView"></View>

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_linearLayout_layout_height"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_radio"
            android:layout_width="@dimen/main_linearLayout_layout_height"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_home_radio"
            android:gravity="center"
            android:text="@string/main_home"
            android:textColor="@drawable/main_text_select"></RadioButton>

        <RadioButton
            android:id="@+id/investment_radio"
            android:layout_width="@dimen/main_linearLayout_layout_height"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_investment_radio"
            android:gravity="center"
            android:text="@string/main_investment"
            android:textColor="@drawable/main_text_select"></RadioButton>

        <RadioButton
            android:id="@+id/property_radio"
            android:layout_width="@dimen/main_linearLayout_layout_height"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_property_radio"
            android:gravity="center"
            android:text="@string/main_propert"
            android:textColor="@drawable/main_text2_select"></RadioButton>

        <RadioButton
            android:id="@+id/more_radio"
            android:layout_width="@dimen/main_linearLayout_layout_height"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/main_more_radio"
            android:gravity="center"
            android:text="@string/main_more"
            android:textColor="@drawable/main_text_select"></RadioButton>
    </RadioGroup>


</LinearLayout>