<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.property.PropertyFragment">

    <com.fiannce.framework.view.ToolBar
        android:id="@+id/toobar_fake"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Toolbar_layout_height"
        app:rightImage="@drawable/my_setting_icon"
        app:rightIsShow="true"
        app:textcolor="@color/colorToolbar"
        app:titleText="@string/main_propert"></com.fiannce.framework.view.ToolBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/more_linearLayout_one_layout_height"
        android:background="@color/colorMoreLinearLayoutOne"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mind_img"
            android:layout_width="@dimen/more_ImageView_one_layout_width"
            android:layout_height="@dimen/more_ImageView_one_layout_height"
            android:layout_gravity="center"
            android:src="@drawable/my_user_default"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/more_text_one"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/more_TextView_one_textSize"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/more_linearLayout_two_layout_height"
        android:background="@color/colorMoreLinearLayoutTwo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_TextView_two_layout_marginLeft"
                android:layout_marginTop="@dimen/more_TextView_two_layout_marginTop"
                android:text="@string/more_text_two"
                android:textColor="@color/colorMoreTextViewone"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_TextView_two_layout_marginLeft"
                android:text="@string/more_text_three"
                android:textColor="@color/colorBlack"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_TextView_two_layout_marginLeft"
                android:text="@string/more_text_four"
                android:textColor="@color/colorBlack"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_linearLayout_three_layout_height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/more_ImageView_two_layout_margin"
                android:layout_weight="1"
                android:src="@drawable/my_recharge_bg"></ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/more_ImageView_two_layout_margin"
                android:layout_weight="1"
                android:src="@drawable/my_withdraw_bg"></ImageView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/more_linearLayout_four_layout_height"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_linearLayout_five_layout_height"
            android:layout_weight="1"
            android:background="@drawable/property_bro_deposit"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_ImageView_three_layout_marginLeft"
                android:src="@drawable/my_invest_manage"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_TextView_two_layout_marginLeft"
                android:text="@string/more_text_five"
                android:textColor="@color/colorBlack"></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/more_ImageView_four_layout_marginLeft"
                android:src="@drawable/right"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_linearLayout_five_layout_height"
            android:layout_weight="1"
            android:background="@drawable/property_bro_deposit"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_ImageView_three_layout_marginLeft"
                android:src="@drawable/my_reward_manage"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_TextView_two_layout_marginLeft"
                android:text="@string/more_text_six"
                android:textColor="@color/colorBlack"></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/more_ImageView_five_layout_marginLeft"
                android:src="@drawable/right"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/more_linearLayout_five_layout_height"
            android:layout_weight="1"
            android:background="@drawable/property_bro_deposit"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_ImageView_three_layout_marginLeft"
                android:src="@drawable/my_asset_manage"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/more_TextView_two_layout_marginLeft"
                android:text="@string/more_text_seven"
                android:textColor="@color/colorBlack"></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/more_ImageView_four_layout_marginLeft"
                android:src="@drawable/right"></ImageView>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>