<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rv_all_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recyclerview_TextView_one_layout_height"
                android:layout_weight="1"
                android:background="@drawable/allmoney_bro"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/recyclerview_TextView_one_paddingLeft"
                android:text="@string/recyclerview_allmoney_null"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/recyclerview_TextView_one_textSize"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="@dimen/recyclerview_linearLayout_one_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/recyclerview_linearLayout_one_layout_marginTop"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/recyclerview_linearLayout_one_paddingLeft">

                    <TextView
                        android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/recyclerview_text_head_one"></TextView>

                    <TextView
                        android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/recyclerview_text_head_two"></TextView>

                    <TextView
                        android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/recyclerview_text_head_three"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/recyclerview_linearLayout_one_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/recyclerview_linearLayout_one_layout_marginTop"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/recyclerview_linearLayout_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/recyclerview_linearLayout_one_paddingLeft">

                        <TextView
                            android:id="@+id/rv_tv1"
                            android:layout_width="@dimen/recyclerview_TextView_three_layout_width"
                            android:layout_height="match_parent"
                            android:text="@string/recyclerview_allmoney_null"
                            android:textColor="@color/colorRecyclerviewTextViewThree"
                            android:textSize="@dimen/recyclerview_TextView_three_textSize"></TextView>

                        <TextView
                            android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recyclerview_text_one"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/recyclerview_linearLayout_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/rv_tv2"
                            android:layout_width="@dimen/recyclerview_TextView_three_layout_width"
                            android:layout_height="match_parent"
                            android:text="@string/recyclerview_allmoney_null"
                            android:textColor="@color/colorRecyclerviewTextViewThree"
                            android:textSize="@dimen/recyclerview_TextView_three_textSize"></TextView>

                        <TextView
                            android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recyclerview_text_two"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/recyclerview_linearLayout_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/rv_tv3"
                            android:layout_width="@dimen/recyclerview_TextView_three_layout_width"
                            android:layout_height="match_parent"
                            android:text="@string/recyclerview_allmoney_null"
                            android:textColor="@color/colorRecyclerviewTextViewThree"
                            android:textSize="@dimen/recyclerview_TextView_three_textSize"></TextView>

                        <TextView
                            android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recyclerview_text_three"></TextView>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/recyclerview_linearLayout_one_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/recyclerview_linearLayout_one_layout_marginTop"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/recyclerview_linearLayout_one_paddingLeft">

                    <LinearLayout
                        android:layout_width="@dimen/recyclerview_linearLayout_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/manage_list_count"></ImageView>

                        <TextView
                            android:id="@+id/rv_imgtv1"
                            android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recyclerview_allmoney_null"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/recyclerview_linearLayout_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/manage_list_guarantee"></ImageView>

                        <TextView
                            android:id="@+id/rv_imgtv2"
                            android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recyclerview_allmoney_null"></TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/recyclerview_linearLayout_two_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/manage_list_member"></ImageView>

                        <TextView
                            android:id="@+id/rv_imgtv3"
                            android:layout_width="@dimen/recyclerview_TextView_two_layout_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/recyclerview_allmoney_null"></TextView>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <com.fiannce.myapplication.fragment.home.customView
                android:layout_width="@dimen/recyclerview_customView_layout_width"
                android:layout_height="match_parent"></com.fiannce.myapplication.fragment.home.customView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/recyclerview_View_layout_height"
            android:background="@color/colorRecyclerviewView"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rv_text_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/coloRed"
            android:gravity="center"
            android:text="@string/recyclerview_text_delete"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/recyclerview_TextView_four_textSize" />
    </LinearLayout>

</LinearLayout>